fix(slider): fix slider jump + fix slider navigation disabled + refactor slide on only one call

--- a/src/gatsby/assets/styles/_demo.less
+++ b/src/gatsby/assets/styles/_demo.less
@@ -140,9 +140,10 @@ pre {
         display: none;
       }
     }
+    .gatsby_demo_code_body,
     .gatsby_demo_item:not(.populated-iframe) {
       overflow-x: hidden;
-      overflow-y: scroll;
+      overflow-y: auto;
       .overflow-style(@mode: none);
     }
     .gatsby_demo_tabs_right {
